@@ -8,6 +8,7 @@ eval_bug.readme
 examples/dns-01.pl
 examples/http-01.pl
 examples/lib/Net_ACME2_Example.pm
+examples/tls-alpn-01.pl
 lib/Net/ACME2.pm
 lib/Net/ACME2/AccessorBase.pm
 lib/Net/ACME2/Authorization.pm
@@ -15,7 +16,7 @@ lib/Net/ACME2/Challenge.pm
 lib/Net/ACME2/Challenge/dns_01.pm
 lib/Net/ACME2/Challenge/http_01.pm
 lib/Net/ACME2/Challenge/http_01/Handler.pm
-lib/Net/ACME2/ChallengeBase/HasToken.pm
+lib/Net/ACME2/Challenge/tls_alpn_01.pm
 lib/Net/ACME2/Error.pm
 lib/Net/ACME2/HTTP.pm
 lib/Net/ACME2/HTTP/Response.pm
